--- a/custom_components/pvoutput_foxess/manifest.json
+++ b/custom_components/pvoutput_foxess/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "pvoutput_foxess",
   "name": "PVOutput FoxESS",
-  "config_flow": true,
-  "documentation": "https://github.com/06benste/PVOutput-FoxESS/blob/main/README.md",
-  "issue_tracker": "https://github.com/06benste/PVOutput-FoxESS/issues",
   "codeowners": ["@06benste"],
-  "version": "1.0.0",
-  "iot_class": "local_polling",
+  "config_flow": true,
   "dependencies": [],
-  "requirements": ["pymodbus", "requests"]
+  "documentation": "https://github.com/06benste/PVOutput-FoxESS/blob/main/README.md",
+  "iot_class": "local_polling",
+  "issue_tracker": "https://github.com/06benste/PVOutput-FoxESS/issues",
+  "requirements": ["pymodbus", "requests"],
+  "version": "1.0.0"
 } 
