--- a/custom_components/pvoutput_foxess/manifest.json
+++ b/custom_components/pvoutput_foxess/manifest.json
@@ -8,5 +8,5 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/06benste/FoxEss-PVOutput/issues",
   "requirements": ["pymodbus", "requests"],
-  "version": "1.0.0"
+  "version": "0.1.1-alpha"
 } 
